--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -21,6 +21,43 @@ body{
    background: url(bbb.jpg)no-repeat;
        background-size: cover;
 }
+
+/*flash*/
+.alert-error {
+    background-color: #f2dede;
+    border-color: #eed3d7;
+    color: #b94a48;
+    float: right;
+    font-size: 150%;
+    text-align: right;
+ }
+
+.alert-alert {
+    background-color: #f2dede;
+    border-color: #eed3d7;
+    color: #b94a48;
+    float: right;
+    font-size: 150%;
+    text-align: right;
+ }
+
+.alert-success {
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+    color: #468847;
+    float: right;
+    font-size: 150%;
+    text-align: right;
+ }
+
+.alert-notice {
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+    color: #468847;
+    float: right;
+    font-size: 150%;
+    text-align: right;
+ }
 .invoice-form{
 	
 	padding:100px 0px 50px 0px;
