--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>Invoice</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -20,3 +21,8 @@
     </div>
   </body>
 </html>
+<script type="text/javascript">
+  setTimeout(function(){
+    $('.alert').hide();
+   }, 3000);
+</script>
